# app/services/ticket_service.pyfrom app.exceptions.app_exceptions import NotFoundError, ValidationErrorfrom app.models.ticket import Ticketfrom app.models.ticket_status import TicketStatusfrom app.repositories.ticket_repository import TicketRepositoryfrom app.repositories.user_repository import UserRepositoryfrom app.utils.validators import is_not_emptyclass TicketService:    """Сервис заявок.    Отвечает за бизнес-логику модуля «Заявки».    """    _TEST_USERS = [        {"id": 1, "full_name": "Test User 1", "email": "test1@example.com"},        {"id": 2, "full_name": "Test User 2", "email": "test2@example.com"},    ]    def __init__(self, ticket_repository: TicketRepository, user_repository: UserRepository = None):        self._ticket_repository = ticket_repository        self._user_repository = user_repository or self.create_default_user_repository()    def create_default_user_repository(self) -> UserRepository:        repository = UserRepository()        for user_data in self._TEST_USERS:            user = repository.add(                full_name=user_data["full_name"],                email=user_data["email"]            )            if user.id != user_data["id"]:                repository._users[user_data["id"]] = user                del repository._users[user.id]                user.id = user_data["id"]                repository._next_id = max(repository._next_id, user_data["id"] + 1)        return repository    def create_ticket(self, title: str, description: str, created_by_user_id: int) -> Ticket:        title = title.strip()        description = description.strip()        if not is_not_empty(title):            raise ValidationError("Заголовок заявки не может быть пустым.")        if not is_not_empty(description):            raise ValidationError("Описание заявки не может быть пустым.")        #2 Проверка существования пользователя при создании заявки        user = self._user_repository.get_by_id(created_by_user_id)        if user is None:            raise NotFoundError(f"Пользователь с ID {created_by_user_id} не найден.")        if not user.is_active:            raise ValidationError("Нельзя создать заявку для неактивного пользователя.")        return self._ticket_repository.add(            title=title,            description=description,            created_by_user_id=created_by_user_id,        )    def get_ticket(self, ticket_id: int) -> Ticket:        ticket = self._ticket_repository.get_by_id(ticket_id)        if ticket is None:            raise NotFoundError(f"Заявка с ID {ticket_id} не найдена.")        return ticket    def list_tickets(self) -> list[Ticket]:        return self._ticket_repository.get_all()    def list_user_tickets(self, user_id: int) -> list[Ticket]:        #2 Проверка существования пользователя при получении списка заявок        user = self._user_repository.get_by_id(user_id)        if user is None:            raise NotFoundError(f"Пользователь с ID {user_id} не найден.")        return self._ticket_repository.list_by_user_id(user_id)    def change_status(self, ticket_id: int, status: TicketStatus) -> Ticket:        ticket = self._ticket_repository.update_status(ticket_id, status)        if ticket is None:            raise NotFoundError(f"Заявка с ID {ticket_id} не найдена.")        return ticket